[BospShell] Initial version
This add an initial version of a possible BOSP-Shell. The goal is to provide
a customized shell experience to the BOSP user where a set of useful commands
and operations are on hand by means of properly defined alias and predefined
functions.

To access the features offered by this shell, the user has just to source the
configuration file which is deployed with the Barbeque installation, i.e.:
$> . <BOSP_BASEDIR>/etc/bbque/bosp_init.env

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/bbque/CMakeLists.txt
+++ b/bbque/CMakeLists.txt
@@ -38,6 +38,14 @@ configure_file (
 	"${PROJECT_BINARY_DIR}/config/default/bbqued"
 )
 
+# Setup BOSP shell
+configure_file (
+	"${PROJECT_SOURCE_DIR}/config/bosp_init.env.in"
+	"${PROJECT_BINARY_DIR}/config/bosp_init.env"
+	@ONLY
+)
+
+
 # Build subdirs
 add_subdirectory(utils)
 add_subdirectory(app)
@@ -102,6 +110,10 @@ install (PROGRAMS "${PROJECT_BINARY_DIR}/config/bbqued"
 		COMPONENT BarbequeRTRM)
 install (FILES "${PROJECT_BINARY_DIR}/config/default/bbqued"
 	DESTINATION ${BBQUE_PATH_DEFAULTS}
+		COMPONENT BarbequeRTRM)
+# Install the BOSP Shell environment setup
+install (FILES "${PROJECT_BINARY_DIR}/config/bosp_init.env"
+		DESTINATION ${BBQUE_PATH_CONF}
 		COMPONENT BarbequeRTRM)
 # Install the PIL configurations
 install (DIRECTORY "${PROJECT_SOURCE_DIR}/config/pil/"
