[SchedPol_YaMS] Optional parallel computation
The parallel metrics computation can now be optionally disabled by
setting variable BBQUE_SP_YAMS_PARALLEL equal to 0 at compile-time. This
feature has been added for debug purpose in order to improve the
readability of the log messages.

Signed-off-by: Giuseppe Massari <joe.massanga@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -126,6 +126,10 @@ option (BBQUE_TEST_PLATFORM_DATA
 option (BBQUE_RTLIB_PERF_SUPPORT
 	"Build RTLib with Performance Counters support" ON)
 
+# YaMS Scheduling Policy: enable parallelized metrics computation (defaulf: YES)
+option (BBQUE_SP_YAMS_PARALLEL
+	"Enable YaMS scheduling policy parallel execution" ON)
+
 ################################################################################
 # Lookup for library dependencies
 ################################################################################
