[Tools_Console] Add building commands
This adds shortcuts for a few commonly used BOSP building targets.

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/config/bosp_init.env.in
+++ b/config/bosp_init.env.in
@@ -68,6 +68,16 @@ bosp-help    - Print this help, or command specific helps
 bosp-version - Dump info on the BarbequeRTRM in use
 
 
+.:: Common BOSP Building targets
+----------------------------------
+
+bosp-build-clean       - Clean BOSP core components (bbque and rtlib demos)
+bosp-build-debug       - Build BOSP in debug mode
+bosp-build-release     - Build BOSP in release mode
+bosp-build-debug-tpd   - Build BOSP in debug mode, with TPD suppport
+bosp-build-release-tpd - Build BOSP in release mode, with TPD support
+
+
 .:: BarbequeRTRM Management Commands
 -------------------------------------
 
@@ -115,6 +125,44 @@ EOF
 echo -ne "$BOSPSH_DEFAULT"
 }
 
+################################################################################
+# Common BOSP Building targets
+################################################################################
+
+function bosp-build-clean {
+echo -ne "${BOSPSH_BLUE}"
+echo -e "*** Cleaning up BOSP (core components)"
+echo -ne "$BOSPSH_DEFAULT"
+make clean_bbque clean_rtlib_testapp clean_rtlib_tutorials
+}
+
+function bosp-build-release {
+echo -ne "${BOSPSH_BLUE}"
+echo -e "*** Rebuilding [Release] BOSP"
+echo -ne "$BOSPSH_DEFAULT"
+make BUILD_TYPE="Release" bbque
+}
+
+function bosp-build-debug {
+echo -ne "${BOSPSH_BLUE}"
+echo -e "*** Rebuilding [Debug] BOSP (with TPD support)"
+echo -ne "$BOSPSH_DEFAULT"
+make BBQUE_CMAKE_OPTS="-DBBQUE_TEST_PLATFORM_DATA=ON" BUILD_TYPE="Debug" bbque
+}
+
+function bosp-build-release-tpd {
+echo -ne "${BOSPSH_BLUE}"
+echo -e "*** Rebuilding [Release] BOSP (with TPD support)"
+echo -ne "$BOSPSH_DEFAULT"
+make BBQUE_CMAKE_OPTS="-DBBQUE_TEST_PLATFORM_DATA=ON" BUILD_TYPE="Release" bbque
+}
+
+function bosp-build-debug-tpd {
+echo -ne "${BOSPSH_BLUE}"
+echo -e "*** Rebuilding [Debug] BOSP (with TPD support)"
+echo -ne "$BOSPSH_DEFAULT"
+make BBQUE_CMAKE_OPTS="-DBBQUE_TEST_PLATFORM_DATA=ON" BUILD_TYPE="Debug" bbque
+}
 
 ################################################################################
 # BarbequeRTRM Management Commands
