--- a/include/bbque/config.h.in
+++ b/include/bbque/config.h.in
@@ -74,7 +74,7 @@
 
 
 /*******************************************************************************
- * BarbequeRTMR Suppported Features
+ * BarbequeRTRM Supported Features
  ******************************************************************************/
 
 /** Use FIFO based RPC channel */
