[MCT_Fairness] Fairness metrics contribute
Introduced the "fairness" contribute.
The expected behavior is to return higher contribute indexes for
scheduling choices that assign a "fair" amount of resource to the
application/EXC, taking into account the amount of applications to schedule
(in the same priority class). Choices of assignment that overpass an
identified quota (i.e. fair partition) are penalized exponentially.

Signed-off-by: Giuseppe Massari <joe.massanga@gmail.com>

--- a/config/bbque.conf.in
+++ b/config/bbque.conf.in
@@ -37,6 +37,7 @@
 # Global parameters [0,100]
 msl.pe       = 	90
 msl.mem      = 	70
+fairness.weight      = 10
 # Contribute specific parameters
 awmvalue.weight        = 2
 congestion.weight      = 1
@@ -45,6 +46,9 @@ congestion.penalty.pe  = 75
 congestion.penalty.mem = 50
 reconfig.weight        = 1
 reconfig.migfact       = 4
+fairness.expbase       = 2
+fairness.penalty.pe    = 0
+fairness.penalty.mem   = 0
 
 ################################################################################
 # Synchronization Manager Options
