[OM] Add the ProfileManager core module
The ProfileManager is a BarbequeRTRM core module in charge to...
to be completed

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/config/bbque.conf.in
+++ b/config/bbque.conf.in
@@ -83,6 +83,7 @@ category.bq.rm = 	NOTICE
 category.bq.am =	NOTICE
 category.bq.ra =	NOTICE
 category.bq.mc =	NOTICE
+category.bq.om =	NOTICE
 #category.bq.sp =	INFO
 #category.bq = 		INFO
 #category.bq.Test =	INFO
