--- a/config/bbque.conf_dbg.in
+++ b/config/bbque.conf_dbg.in
@@ -85,6 +85,7 @@ rootCategory = DEBUG, raConsole
 #category.bq.rm = 		ERROR
 #category.bq.sm = 		ERROR
 #category.bq.ym = 		ERROR
+#category.bq.om = 		ERROR
 #category.bq.ra = 		ERROR
 #category.bq.ap = 		ERROR
 #category.bq.tpd = 		ERROR
