--- a/bbque/CMakeLists.txt
+++ b/bbque/CMakeLists.txt
@@ -66,6 +66,7 @@ set (BARBEQUE_SRC platform_proxy ${BARBEQUE_SRC})
 set (BARBEQUE_SRC pp/linux ${BARBEQUE_SRC})
 set (BARBEQUE_SRC signals_manager scheduler_manager ${BARBEQUE_SRC})
 set (BARBEQUE_SRC synchronization_manager ${BARBEQUE_SRC})
+set (BARBEQUE_SRC profile_manager ${BARBEQUE_SRC})
 set (BARBEQUE_SRC daemonize ${BARBEQUE_SRC})
 if(BBQUE_TEST_PLATFORM_DATA)
 	set (BARBEQUE_SRC test_platform_data ${BARBEQUE_SRC})
