[Tools_Console] Bugfixe initialization
If the console is started before bbque is running, the target folder for
the resources and tasks monitoring scripts could be not available.
This fixes this issue by ensuring a correct path is created before deplying
the auxiliary scripts.

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/tools/bbqueConsole.sh.in
+++ b/tools/bbqueConsole.sh.in
@@ -15,6 +15,7 @@ BBQUE_SUPDATE="${BBQUE_SUPDATE:-1}"
 FONT=-misc-fixed-medium-r-normal--10-100-75-75-c-60-iso10646-1
 
 
+mkdir -p $BBQUE_SYSROOT/var/bbque 2>/dev/null
 cat > $BBQUE_SYSROOT/var/bbque/BbqConsole_Resources.sh <<EOF
 #!/bin/bash
 
