[Tools_Console] Cleanup BBQ var dir on startup
Before starting up the BBQ deamon this cleans up the folder of run-time
generated files to avoid any kind of (potential) problems.

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/config/bosp_init.env.in
+++ b/config/bosp_init.env.in
@@ -194,6 +194,7 @@ sudo kill -USR2 $BOSPSH_BBQUE_PID
 }
 
 function bbque-startd {
+bosp-cleanup
 if [ $# -ge 1 ]; then
 	sudo BBQUE_CONF=$1 $SYSROOT/etc/init.d/bbqued start
 else
@@ -206,6 +207,7 @@ function bbque-stopd {
 }
 
 function bbque-start {
+bosp-cleanup
 if [ $# -ge 1 ]; then
 	sudo $BIN -c $1
 else
