[Configure] Add RPC Timeout configuration
The RPC channel could be subject to timeouts, e.g. while waiting for a
response to a command, which should be properly handled since impact directly
on framework responsiveness.
This patch defines a new configuration option to define the timeouts to use
in [ms] for each RPC communication. A conservative 1[s] timeout should be
reasonable safe also for highly congestion ed communications period.

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,10 @@ set (BBQUE_DAEMON_LOCKFILE "var/lock/bbqued.lock")
 set (BBQUE_DAEMON_PIDFILE  "var/run/bbqued.pid")
 set (BBQUE_DAEMON_RUNDIR   "")
 
-# Barbeque installation pats
+# Barbeque RPC configuration
+set (BBQUE_RPC_TIMEOUT     1000)
+
+# Barbeque installation paths
 set (BBQUE_PATH_BBQ        "sbin")
 set (BBQUE_PATH_INIT       "etc/init.d")
 set (BBQUE_PATH_DEFAULTS   "etc/default")
