[Deferrable] Add deferrable execution base class
A deferrable is an object which allows to execute a specified method at the
nearest deadline among a collection of schedule request.
The deferrable could be created or configured to provide a "periodic" execution
of a certain function. Schedule requests are collected and aggregated in order
to schedule the nearest request (in time) among all those asserted.

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/bbque/utils/CMakeLists.txt
+++ b/bbque/utils/CMakeLists.txt
@@ -3,7 +3,9 @@
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --std=c++0x -lrt -fPIC")
 
 # Add sources in the current directory to the target binary
-set (BBQUE_UTILS_SRC timer metrics_collector perf attributes_container)
+set (BBQUE_UTILS_SRC timer deferrable)
+set (BBQUE_UTILS_SRC ${BBQUE_UTILS_SRC} perf metrics_collector)
+set (BBQUE_UTILS_SRC ${BBQUE_UTILS_SRC} attributes_container)
 
 #Add as library
 add_library(bbque_utils STATIC ${BBQUE_UTILS_SRC})
