[BospShell] Add terminal activation
A new terminal could be opened using the "bosp-shell" command.
TODO: make the new shell already configured.

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/config/bosp_init.env.in
+++ b/config/bosp_init.env.in
@@ -66,6 +66,7 @@ For a longer description type "bosp-help <command>"
 bosp-cleanup - Clean-up all BOSP run-time generated data
 bosp-help    - Print this help, or command specific helps
 bosp-version - Dump info on the BarbequeRTRM in use
+bosp-shell   - Start a new BOSP terminal
 
 
 .:: Common BOSP Building targets
@@ -129,6 +130,14 @@ function bosp-cleanup {
 echo -ne "$BOSPSH_PURPLE"
 echo "Wipe BOSP run-time data [$SYSROOT/@BBQUE_PATH_VAR@/]..."
 rm -rf $SYSROOT/@BBQUE_PATH_VAR@/*
+}
+
+# - XWindows geometries recoveder using "xwininfo" utility
+# - Font is configured by "-fn" option, to see a list of fonts run:
+#     "xlsfonts | less"
+FONT=-misc-fixed-medium-r-normal--10-100-75-75-c-60-iso10646-1
+function bosp-shell {
+	aterm +sb -fn $FONT -geometry 118x37+711+240 -title "BBQUE Shell"  &
 }
 
 ################################################################################
