[BospShell] Add logger viewer
A BBQ log could be opened for run-time view and update using the new
"bbque-log" command, which eventually accepts also a parameter defining the
logfile to show.

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/config/bosp_init.env.in
+++ b/config/bosp_init.env.in
@@ -91,6 +91,7 @@ bbque-startd  - Start the Bbqued daemon
 bbque-stats   - Dump Bbqued daemon statistics
 bbque-stest   - Stress test the Bbqued dameon
 bbque-stopd   - Stop the Bbque daemon
+bbque-log     - Show the Bbque daemon log
 
 
 .:: Test Applications
@@ -222,6 +223,14 @@ if [ $# -ge 1 ]; then
 else
 	sudo $BIN
 fi
+}
+
+BBQUE_LOGFILE="$SYSROOT/var/bbque/bbque.log"
+function bbque-log {
+LOG="${1:-$BBQUE_LOGFILE}"
+echo "Opening barbeque logfile [$LOG]..."
+aterm +sb -fn $FONT -geometry 111x56+-9-17 -title "BBQUE Log [$LOG]" \
+	-e tail -f $LOG &
 }
 
 ################################################################################
