--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,7 @@ set (BBQUE_PATH_RECIPES    "etc/bbque/recipes")
 set (BBQUE_PATH_HEADERS    "include/bbque")
 set (BBQUE_PATH_RTLIB      "lib/bbque")
 set (BBQUE_PATH_PLUGINS    "lib/bbque/plugins")
+set (BBQUE_PATH_APPS       "usr/bin")
 set (BBQUE_PATH_DOCS       "usr/share/bbque")
 set (BBQUE_PATH_CMAKE      "usr/share/bbque")
 set (BBQUE_PATH_VAR        "var/bbque")
