--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -169,6 +169,7 @@ add_subdirectory (plugins)
 add_subdirectory (bbque)
 add_subdirectory (test)
 add_subdirectory (tools)
+add_subdirectory (demos)
 
 
 ################################################################################
