[BospShell] Add 2PARMA Demo2
This is a shortcut to run the second demo for the 2PARMA project.

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/config/bosp_init.env.in
+++ b/config/bosp_init.env.in
@@ -103,6 +103,11 @@ bbque-tutorial-plain - a tutorial on RTLib Plain API
 bbque-tutorial-aem   - a tutorial on RTLib AEM API
 
 
+.:: 2PARMA Demos
+----------------------
+2parma-demo2  - run the 2nd demo for the 2PARMA project
+
+
 .:: PARSEC (v2.1) Benchmarks Commands
 --------------------------------------
 
@@ -234,9 +239,14 @@ aterm +sb -fn $FONT -geometry 115x56+-9-17 -title "BBQUE Log [$LOG]" \
 }
 
 ################################################################################
-# Test-Applications
+# 2PARMA Project Demos
 ################################################################################
 
+function 2parma-demo2 {
+aterm +sb -fn $FONT -geometry 125x30+705-17 \
+		-title "BBQUE v0.8 (Betty Bacon) - 2PARMA Demo2" \
+		-e bbque-2parma-demo2 &
+}
 
 
 ################################################################################
