[Daemon] Safe wait for HOST unloading
When BBQ is stopped, it is safer to wait 1s before to clean-up the BBQ
CGroups. Otherwise, some groups (i.e. HOST) could be result still busy,
probably because the kernel has still to complete the movement of the last
tasks.

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/config/bbqued.in
+++ b/config/bbqued.in
@@ -192,6 +192,7 @@ stop() {
 	if [ -d $BBQUE_CGMOUNT/bbque ]; then
 		echo "Releasing CGroups shiled..."
 		ShieldRelease
+		sleep 1
 		echo "Releasing BBQ CGroups..."
 		find  $BBQUE_CGMOUNT/bbque -type d -delete
 	fi
