--- a/config/bosp_init.env.in
+++ b/config/bosp_init.env.in
@@ -243,9 +243,11 @@ aterm +sb -fn $FONT -geometry 115x56+-9-17 -title "BBQUE Log [$LOG]" \
 ################################################################################
 
 function 2parma-demo2 {
+TRG="${1:-Numa}"
+echo "Starting 2PARMA Demo2, Target [$TRG]..."
 aterm +sb -fn $FONT -geometry 125x30+705-17 \
-		-title "BBQUE v0.8 (Betty Bacon) - 2PARMA Demo2" \
-		-e bbque-2parma-demo2 &
+		-title "BBQUE v0.8 (Betty Bacon) - 2PARMA Demo2 [Target $TRG]" \
+		-e bbque-2parma-demo2 $TRG &
 }
 
 
